Fixed the horizontal scrolling error due to the .petition css format

--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@
   /* Dark mode navbar text color */
 }
 
+
 body {
-  transition: all .5s ease-out;
+  transition: all 1s ease-in-out;
   transform: none;
   height: 100%;
   width: 100%;
@@ -18,6 +19,7 @@ body {
   color: #000;
   background-color: #FFFF;
 }
+
 
 /* Part 1: Navbar */
 
@@ -286,32 +288,17 @@ body {
 }
 
 
-/* Fading animation */
-.fade {
-  opacity: 1;
-}
-
-@keyframes fade {
-  from {
-    opacity: .4
-  }
-
-  to {
-    opacity: 1
-  }
-}
-
 .petition {
   font-family: Graphik, Arial, sans-serif;
   display: flex;
-  justify-content: space-evenly;
-  padding-left: 25%;
-  padding-right: 40%;
+  justify-content: space-between;
+  max-width: 100%;
+  padding-left: 28%;
   padding-bottom: 5%;
   padding-top: 5%;
   background-color: #f3f3f3;
-  width: 100%;
 }
+
 
 .form {
   background: transparent;
@@ -320,7 +307,7 @@ body {
   border-radius: 120px;
   padding: 100px;
   background-color: #FFFF;
-  margin-left: -20%;
+  margin-left: -25%;
 }
 
 
@@ -376,9 +363,9 @@ input[type="text"] {
 }
 
 .action-para {
-  width: 100%;
-  margin-left: 5em;
-  margin-right: 5%;
+  width: 80%;
+  margin-left: 4%;
+  padding-right: 2%;
 }
 
 .action-para p {
@@ -390,16 +377,16 @@ input[type="text"] {
 }
 
 .petition-container {
-  display: flex;
-  flex-direction: column;
+  display: block;
   width: 100%;
-  margin-right: 20%;
-  padding-right: 10%;
+  margin-left: 5%;
+  margin-right: 0.5%;
+  padding-left: -.5%;
+  padding-right: 5%;
   gap: 20px;
 }
 
 .signature {
-  /* Adjust this value as needed */
   animation: slideUp 1s ease-in-out forwards;
 }
 
